# Sofar_Test_

./: package.xml  setup.cfg  setup.py
launch/: bot_simulation.py  bringup_launch.py  localization_launch.py  multirobot_spawn.py  navigation_launch.py  rviz_launch.py  slam_launch.py
multirobots_gazebo/: package.xml  setup.py
multirobots_gazebo/launch/: bot_simulation.py  localization_launch.py  multirobot_spawn.py  navigation_launch.py  rviz_launch.py  slam_launch.py  spawn_bot_box_launch.py
multirobots_gazebo/multirobots_gazebo/: spawn_bot.py
multirobots_gazebo/resource/: turtlebot3_waffle.urdf
resource/: nav2_multirobot_params_1.yaml  nav2_namespaced_view.rviz  turtlebot3_waffle.urdf  turtlebot3_world.yaml
world/: aws_house.world
